--- a/src/css/main.css
+++ b/src/css/main.css
@@ -34,6 +34,76 @@ img {
   height: auto;
 }
 
-h1 {
-  color: red;
+li {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.card-container {
+  width: 1128px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+  margin: 0 auto;
+  padding: 0;
+}
+.gallery-image {
+  width: 360px;
+  transition: transform 0.3s;
+}
+.gallery-image:hover {
+  transform: scale(1.04);
+}
+
+/* spinner */
+
+.loader {
+  width: 48px;
+  height: 48px;
+  margin: 0 auto;
+
+  border: 3px dotted #fff;
+  border-style: solid solid dotted dotted;
+  border-radius: 50%;
+  display: inline-block;
+  position: relative;
+  box-sizing: border-box;
+  animation: rotation 2s linear infinite;
+}
+.loader::after {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  border: 3px dotted #ff3d00;
+  border-style: solid solid dotted;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  animation: rotationBack 1s linear infinite;
+  transform-origin: center center;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes rotationBack {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-360deg);
+  }
 }
